<resources>
    <string name="app_name">App23</string>
    <string name="podcast">Podcast</string>
    <string name="artistes">Artistes</string>
    <string name="articles">Articles</string>
    <string name="evenements">Evenements</string>
    <string name="bonsplans">Bons Plans</string>
    <string name="title_activity_login">Se connecter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contest_condition">1 - Envoie ton nom prénom mail à concours@yourdj.fr en précisant pour quel jeu tu joues \n2 - Clique sur le boutton ci-dessous pour partager le post sur Facebook
        \n3 - RDV sur la page Facebook de ta ville dans quelques jours pour les résultats ... </string>
</resources>
